# la-syrie-au-dela-de-la-guerre

./: .gitignore  README.md  analyze alep.ipynb  analyze complot.ipynb  analyze.ipynb  flake.nix  graphs.ipynb  main.py  pyproject.toml  stereotype.ipynb
output/assad_vs_daech/: 6+_keywords.pkl  prismes_acteurs_nuance.pkl
src/: __init__.py  pandas_analysis.py  plotting_lib.py
temp/: assad_vs_daech.csv
