[project]
name = "syria-before-war"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aquarel>=0.0.7",
    "certifi>=2025.11.12",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=1.1.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mistralai>=1.9.11",
    "notebook>=7.4.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyfonts>=1.1.3",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
]
